Archive2/01/d33ecba43d97dd/output
main.cpp: In function 'int main()':
main.cpp:50:8: error: 'c' was not declared in this scope
  if(x){c
        ^
main.cpp:20:9: warning: unused variable 'l' [-Wunused-variable]
  double l; //length
         ^
main.cpp:29:9: warning: unused variable 'Vhemisphere' [-Wunused-variable]
  double Vhemisphere = ((2/3) * pi * pow(r,3));
         ^
main.cpp:36:9: warning: unused variable 'TSAcylinder' [-Wunused-variable]
  double TSAcylinder = ((2 * pi * pow(r,2)) + (2 * pi * r * h));
         ^
main.cpp:41:9: warning: unused variable 'Vcone' [-Wunused-variable]
  double Vcone = ((1/3) * pi * pow(r,2) * h);
         ^
main.cpp:42:9: warning: unused variable 'TSAcone' [-Wunused-variable]
  double TSAcone = ((pi * pow(r,2)) + (pi * r * s));
         ^
main.cpp:45:7: warning: unused variable 'y' [-Wunused-variable]
  bool y = (cyl1 == cyl2);
       ^
main.cpp:46:7: warning: unused variable 'z' [-Wunused-variable]
  bool z = (cone1 == cone2);
       ^
